<resources>
    <string name="app_name">Contact management</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_contact_activity">Contacts</string>
    <string name="title_group_activity">Groups</string>

    <string name="menu_contacts">Contacts</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="main_menu">Main Menu</string>
    <string name="menu_groups">Groups</string>
    <string name="show_option">%1$s option was pressed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_opening_tv_fragment">Hello!</string>
    <string name="disclaimer_opening_tv_fragment">Disclaimer</string>
    <string name="menu_exit">Exit</string>
    <string name="activity_group_text">Group activity</string>
    <string name="activity_contacts_text">Contacts activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_chart">Chart</string>
    <string name="menu_chart">Chart</string>
    <string name="tiet_hint_contact">Search for contacts..</string>
    <string name="tv_add_contact_group">Group</string>
    <string name="add_contact_fname_tiet_label">First name</string>
    <string name="add_contact_pnumber_tiet_label">Phone number</string>
    <string name="add_contact_bday_tiet_label">Birthday</string>
    <string name="add_contact_address_tiet_label">Address</string>
    <string name="add_contact_lname_tiet_label">Last name</string>
    <string name="btn_save_label">SAVE</string>

    <string name="add_contact_date_error_msg">Accepted format for birthday is DD/MM/YYYY</string>
    <string name="add_contact_text_error_msg">Accepted format for text is a minimum of 3 characters</string>
    <string name="add_contact_pnumber_error_msg">Accepted phone numbers have 10 figures</string>
    <string name="add_group_name_tiet_label">Name</string>
    <string name="add_group_members_tv">Members</string>
    <string name="add_group_name_tv">Group</string>
    <string name="add_group_name_error_msg">Accepted format for name is a minimum of 3 characters</string>
    <string name="til_hint_group">Search for groups..</string>
    <string name="lv_contact_value">Empty value</string>
    <string name="tv_dp_birthday_label">Birthday</string>
    <string name="btn_add_group_edit_label">Edit</string>

    <string-array name="add_contact_category_values">
        <item>Family</item>
        <item>Work</item>
        <item>Close friends</item>
    </string-array>

</resources>