<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_baseline_contacts_24"
            android:title="@string/menu_contacts" />
        <item
            android:id="@+id/nav_group"
            android:icon="@drawable/ic_baseline_groups_24"
            android:title="@string/menu_groups"/>
        <item
            android:id="@+id/nav_chart"
            android:icon="@drawable/ic_baseline_chart_24"
            android:title="@string/menu_chart" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_exit" />
    </group>
</menu>