<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContactActivity">

    <Spinner
        android:id="@+id/add_contact_group_spn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:entries="@array/add_contact_category_values"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_group_members" />

    <TextView
        android:id="@+id/tv_add_group_members"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/tv_add_contact_group"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_contact_lname_til" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_contact_fname_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_contact_fname_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_contact_fname_tiet_label" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_contact_lname_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_contact_fname_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_contact_lname_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_contact_lname_tiet_label" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_contact_pnumber_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_contact_group_spn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_contact_pnumber_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_contact_pnumber_tiet_label"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_birthday_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_dp_birthday_label"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_contact_pnumber_til"/>


    <DatePicker
        android:id="@+id/add_contact_bday_dp"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_birthday_label" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_contact_address_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_contact_bday_dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_contact_address_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_contact_address_tiet_label" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_contact_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_label"
        app:layout_constraintTop_toBottomOf="@id/add_contact_address_til"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="48dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>